[package]
name = "wgq_rust"
version = "0.1.3"
edition = "2021"
authors = ["disburden <wgq@email.com>"]
repository = "https://github.com/disburden/wgq_rust.git"
description = "我自己用的库,可能不是适合所有人"
categories = ["development-tools"]
license = "MIT"

[dependencies]
openssl = "0.10"
base64 = "0.21"
bcrypt = "0.17"
aes-gcm = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0"